--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,29 +9,24 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "News"
+  url = "#about"
   weight = 20
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = "publication/"
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "Blog"
+  url = "blog/"
   weight = 40
 
 [[main]]
-  name = "Courses"
-  url = "courses/"
-  weight = 50
-
-[[main]]
   name = "Contact"
-  url = "#contact"
-  weight = 60
+  url = "contact/"
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
