--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,12 +10,12 @@
 
 [[main]]
   name = "News"
-  url = "#about"
+  url = "#skills"
   weight = 20
 
 [[main]]
   name = "Projects"
-  url = "publication/"
+  url = "#publication"
   weight = 30
 
 [[main]]
@@ -25,7 +25,7 @@
 
 [[main]]
   name = "Contact"
-  url = "contact/"
+  url = "#contact"
   weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
