--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,24 +9,34 @@
   weight = 10
 
 [[main]]
-  name = "News"
-  url = "#skills"
+  name = "Prof Experience"
+  url = "#experience"
+  weight = 12
+
+[[main]]
+  name = "Posts"
+  url = "#posts"
   weight = 20
 
 [[main]]
   name = "Projects"
-  url = "publication/"
+  url = "#projects"
   weight = 30
 
 [[main]]
-  name = "Blog"
-  url = "post/"
+  name = "Publications"
+  url = "#featured"
   weight = 40
+
+[[main]]
+  name = "Courses"
+  url = "courses/"
+  weight = 50
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 50
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
